...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:id="@+id/loginlayout"
    android:theme="@style/Theme.AppCompat">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen_de_whatsapp_2023_11_15_a_las_12_47_36_04bc5f3c" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:inputType="text"
        android:text="user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="user"
...
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#AC84F4"
        android:text="Registrarse"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/loginbutton"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#03A9F4"
        android:text="Iniciar Sesion"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textViewusername"
        android:layout_width="76dp"
...
